# cube_timer

./: move_set.csv  pyproject.toml
src/cube_timer/: __init__.py  app.py  scrambler.py
src/cube_timer/moves/: __init__.py  double.py  move.py  normal.py  prime.py  types.py
src/cube_timer/scrambler/: __init__.py  generate.py  move_types.py  moves.py  scrambler.py  types.py
