[project]
name = "cube-timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pedro_meinen", email = "pedromeinen99@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cube-timer = "cube_timer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
